# llmtest

./: .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml
examples/: README.md  customer_support_bot.yaml  generate_sample_reports.py  rag_application.yaml
examples/anthropic_example/: llmtest.yaml  run_test.py
examples/anthropic_example/docs/: refund_policy.txt  shipping_policy.txt
examples/ci_cd/: README.md  github_actions.yml
examples/openai_example/: llmtest.yaml  run_test.py
examples/reports/: customer_support_report.html  customer_support_results.json  rag_application_report.html  rag_application_results.json  sample_report.html  sample_results.json
examples/simple_test/: run_test.py  test_config.yaml
src/llmtest/: __init__.py  cli.py  config.py  html_reporter.py  models.py  reporting.py  runner.py
src/llmtest/evaluators/: __init__.py  grounding.py  injection.py  regression.py  safety.py
src/llmtest/providers/: __init__.py  anthropic_provider.py  base.py  http_provider.py  mock.py  openai_provider.py
src/llmtest/utils/: text.py
tests/: __init__.py  conftest.py  test_config.py  test_evaluators.py  test_providers.py  test_reporting.py  test_runner.py
